static/style.css
html {
	min-width: 350px;
}

a {
	text-decoration: none!important;
}

label {
	color: #6d747c;
	font-weight: 500;
	padding-bottom: 3px;
}

/* Navigation */

header {
	top: -2px;
	border: 1px solid #dddddd80;
	height: 4rem;
}

.navbar {
	align-content: center
}

.navbar-brand {
	display: flex;
	align-items: center;
	font-family: 'Cookie', cursive;
	font-size: 2rem!important;
	margin-left: 1rem;
}

.nav-item {
	margin-right: 0.5rem;
}

@media only screen and (max-width: 992px) {
	.navbar>.container-fluid {
		display: flex;
		flex-wrap: inherit;
		align-items: center;
		justify-content: space-between;
	}
	.navbar-nav {
		display: flex!important;
		flex-direction: row!important;
	}
}

/* Main */

main {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}

/* Feed */

.feed {
	display: flex;
	flex-direction: column;
	padding-top: 32px;
	max-width: 600px!important;
	margin: 0 auto;
}

.post-listing {
	display: flex;
	flex-direction: column;
	margin-top: 10px;
	justify-content: space-between;
}

.post-wrapper {
	display: flex;
	flex-direction: column;
	border: 1px solid #dddddd80;
	border-radius: 8px;
	margin-bottom: 2rem;
}

.post-header {
	display: flex;
	align-items: center;
	padding-left: 1rem;
	border-bottom: 1px solid #dddddd80;
	height: 3rem;
}

.author-username {
	margin: 0px!important;
	min-width: 120px;
}

.post-content {
	display: flex;
	justify-content: center;
}

/* .post-pic-section {
	width: 600px;
	display: flex;
} */

.picture {
	max-width:100%;
	max-height:100%;
	margin: auto;
	object-fit: contain;
}

.post-comment-section {
	display: flex;
	flex-direction: column;
}

.post-buttons {
	display: flex;
	flex-direction: row;
	height: 2.5rem;
}

.button {
	align-items: center;
	background: transparent;
	border: none;
	cursor: pointer;
	display: flex;
	justify-content: center;
	padding: 8px;
}

.author-section {
	display: flex;
	flex-direction: row;
	align-items: baseline
}

.post-description {
	color: #858484;
	margin: 0 12px 0 0;
}

.comments {
	padding: 12px 0;
}

.comment {
	display: flex;
	flex-direction: row;
	align-items: baseline;
}

.commentator {
	margin: 0px!important;
	padding: 0 12px;
}

.comment-text {
	color: #666666;
	overflow-y: scroll;
	margin: 0 12px 0 0;
	-ms-overflow-style: none;	/* IE and Edge */
	scrollbar-width: none;		/* Firefox */
}

/* Hide scrollbar for Chrome, Safari and Opera */
.comment-text::-webkit-scrollbar {
	display: none;
}

.input-box {
	display: flex;
	flex-direction: row;
	min-height: 4rem;
	max-height: 10rem;
}

.btn-outline-primary {
	border: none!important;
}

.pagination {
	justify-content: center;
}
/* Messages */

/* The snackbar - position it at the bottom and in the middle of the screen */
#snackbar {
	visibility: hidden;
	min-width: 250px;
	margin-left: -125px;
	background-color: rgba(168, 168, 168, 0.885);
	color: #fff;
	text-align: center;
	padding: 16px;
	position: fixed;
	z-index: 1;
	left: 50%;
	top: 30px;
	border: 1px solid #ebe9e93e;
	border-radius: 8px;
}

#snackbar.show {
	visibility: visible;
	/* Add animation: Take 0.5 seconds to fade in and out the snackbar.
	However, delay the fade out process for 2.5 seconds */
	-webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
	animation: fadein 0.5s, fadeout 0.5s 2.5s;
}

/* Animations to fade the snackbar in and out */
@-webkit-keyframes fadein {
	from {top: 0; opacity: 0;}
	to {top: 30px; opacity: 1;}
}

@keyframes fadein {
	from {top: 0; opacity: 0;}
	to {top: 30px; opacity: 1;}
}

@-webkit-keyframes fadeout {
	from {top: 30px; opacity: 1;}
	to {top: 0; opacity: 0;}
}

@keyframes fadeout {
	from {top: 30px; opacity: 1;}
	to {top: 0; opacity: 0;}
}


/* .info-box {
	display: flex;
	background-color: #92bace17;
	padding: 6px 32px;
	text-align: end;
	margin: 24px 0px 24px 70%;
	width: fit-content;
	border: 1px solid #ebe9e93e;
	border-radius: 8px;
} */

.info {
	padding: 24px;
	text-align: center;
	color: rgba(0, 0, 0, 0.674);
}

.info-log {
	padding: 16px 128px 0 0;
	text-align: right;
	color: rgba(0, 0, 0, 0.674);
}

/* Forms */

.error {
	color: #630000a9;
} 

.form-wrapper {
	min-height: 100%;
	margin: 1rem 0;
}

.form-container {
	display: flex;
	flex-direction: column;
	align-items: center;
	max-width: 350px;
	border-radius: 10px;
	background-color: #f8f9fa;
	box-shadow: 3px 3px 8px #e6e6e6;
	margin: 1.5rem auto;
	border: 1px solid #dddddd80;
}

.form-header {
	padding: 64px 0 0 0;
	font-size: 4rem;
}

.form-header-light {
	font-size: larger;
	padding: 24px 0;
	color: #606770;
	font-weight: 400;
	text-align: center;
}

.form-header-text{
	color: #8e8e8e;
	font-size: 1rem;
	font-weight: 400;
	line-height: 20px;
	margin: 0px 40px 25px;
	text-align: center;
}

.form-box {
	width: 74%;
	padding-bottom: 1.5rem;
}

.input-field {
	margin-bottom: 1rem!important;
}

.form-control {
	border: 1px solid #6c757d2e!important;
}

.form-footer {
	color: rgba(var(--fe0,0,55,107),1);
	font-size: 14px;
	line-height: 16px;
	margin-top: 12px;
	text-align: center;
}

/* Upload page */

.upload-main {
	display: flex;
	flex-direction: row;
	justify-content: center;
}

.thumbnails-container {
	display: flex;
	flex-direction: column;
	overflow-y: scroll;
	max-height: 626px;
	max-width: 251px;
	margin: 5px;
}

.img-thumbnail-wrapper {
	position: relative;
	display: flex;
	justify-content: center;
	align-content: space-between;
}

.img-thumbnail-wrapper .delete {
	position: absolute;
	top: 14px;
	right: 25px;
	z-index: 100;
	height: 26px;
	width: 26px;
	padding: 0;
	background-color: #ffffff6b;
	color: rgb(255, 255, 255);

}

.delete {
	border-radius: 25px;
	border-width: 1px;
	border-style: solid;
	border-color: rgba(255, 255, 255, 0.514);
	position: absolute;
	background: none;
	background-color: #ffffff6b;
	color: rgb(255, 255, 255);
}

.pic-thumbnail {
	margin: 5px;
	max-width: 91%!important;
}

@media only screen and (max-width: 560px) {

	.thumbnails {
		min-width: 100%
	}

	.thumbnails-form {
		padding: 0.5rem;
		max-width: 700px;
		margin: 1.5rem;
		display: flex;
		flex-direction: row;
	}
	.upload-main {
		display: flex;
		flex-direction: column-reverse;
		flex-wrap: inherit;
		align-items: center;
		justify-content: space-between;
	}
	.thumbnails-container {
		display: flex!important;
		flex-direction: row!important;
		max-height: 100%;
		min-width: 100%;
		overflow-x: scroll;
	}
	.img-thumbnail-wrapper {
		min-width: 50%;
		display: flex;
		justify-content: space-between;
	}

	#save-redo {
		display: flex;
		flex-direction: column;
	}
}

.sticker-container {
	display: flex;
	flex-direction: row;
	overflow-x: scroll;
}

.selected.sticker {
	opacity: 0.5;
}

#sticker-preview-1, #sticker-preview-2, #sticker-preview-3, #sticker-preview-4 {
	position: relative;
	height: 20%;
	z-index: 100;
}

#sticker-preview-1 {
	top: 79%;
	left: 15px;
}

#sticker-preview-2 {
	top: 59%;
	left: 115px;

}

#sticker-preview-3 {
	top: 39%;
	left: 215px;

}

#sticker-preview-4 {
	top: 19%;
	left: 320px;
}

.sticker {
	margin: 10px;
	max-width: 9%;
}

.sticker:hover {
	opacity: 0.7;
}

.upload-form-container {
	display: flex;
	flex-direction: column;
	align-items: center;
	max-width: 700px;
	border-radius: 10px;
	background-color: #f8f9fa;
	box-shadow: 3px 3px 8px #e6e6e6;
	margin: 1.5rem;
	border: 1px solid #dddddd80;
	padding: 1.5rem;
}

.upload-form {
	display: flex;
	flex-direction: column;
}

input[type="file"] {
	display: none;
}

.custom-file-upload {
	border: 1px solid #ccc;
	cursor: pointer;
	padding: 5px 10px;
	margin: 10px 0px 10px 10px;
	border-radius: 0.375rem;
	font-weight: 400;
	height: 35px;
	overflow-x: scroll;
	-ms-overflow-style: none;	/* IE and Edge */
	scrollbar-width: none;		/* Firefox */
}

/* Hide scrollbar for Chrome, Safari and Opera */
.custom-file-upload::-webkit-scrollbar {
	display: none;
}

#file-selected {
	color: #262626;
	padding-left: 5px;
}

#upload-btn {
	align-self: center;
	width: 83px;
	height: 35px;
	padding: 4px;
	margin: 10px;
}

/* Webcam */

#camera {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.webcam-container {
	display: flex;
	justify-content: center;
	padding: 0px 1em 1em 1em;
	border: green;
	border-radius: 5px;
}

#canvas {
	-moz-transform: scale(-1, 1);
	-webkit-transform: scale(-1, 1);
	-o-transform: scale(-1, 1);
	transform: scale(-1, 1);
	filter: FlipH;
}

.webcam-btn {
	margin: 0.75em;
	min-width: 100px;
}

#snap-btn-text {
	font-size: 8px;
	text-align: center;
	display: flex;
	justify-content: center;
}

/* Profile */

.stats {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: baseline;
	padding: 3rem 0 1rem 0;

}

/* .profile-username {
	padding: 3rem 0 1rem 0;
} */

.profile-grid {
	display: grid;
	gap: 28px;
	grid-template-columns: repeat(3, 1fr);
	padding: 2rem 0;
}

.user-pic {
	flex: 1 0 0%;
	position: relative;
	justify-content: center;
	align-content: space-between;
}

.profile-grid-picture {
	height: 100%;
	object-fit: cover;
	width: 100%;
}


/* Login */

.separator {
	display: flex;
	flex-direction: row;
	margin: 20px 0px;
}

.or {
	color: #8e8e8e;
	font-size: 13px;
	font-weight: 600;
	line-height: 15px;
	margin: 0 18px;
}

.line {
	background-color: #dbdbdb;
	flex-grow: 1;
	height: 1px;
	position: relative;
	top: 0.45em;
}

.sign-text {
	margin: -3px 0 -4px;
}

.sign-up {
	color: #262626;
	font-size: 14px;
	margin: 15px;
	text-align: center;
}

span.sign-link {
	text-decoration: none;
}

/* Footer */

.footer {
	position: inherit;
	bottom: 0;
}

